--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,6 +17,10 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
