--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^5.13.7"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
-    "nodemon": "^2.0.12"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
