--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "apollo-server": "^3.3.0",
-    "graphql": "^15.6.0"
+    "graphql": "^15.6.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
