--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "apollo-server": "^3.3.0",
+    "dotenv": "^10.0.0",
     "graphql": "^15.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.9",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
