--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -8,12 +8,18 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
     "apollo-server": "^3.3.0",
+    "apollo-server-core": "^3.6.3",
+    "apollo-server-express": "^3.6.3",
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "graphql": "^15.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.9",
     "mongoose-unique-validator": "^2.0.3",
+    "subscriptions-transport-ws": "^0.11.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
