--- a/part9/first-steps/package.json
+++ b/part9/first-steps/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "ts-node": "ts-node",
-    "calculateBmi": "ts-node -- bmiCalculator.ts"
+    "calculateBmi": "ts-node bmiCalculator.ts",
+    "exerciseCalculator": "ts-node exerciseCalculator.ts"
   },
   "devDependencies": {
     "@types/node": "^17.0.19",
