--- a/part9/first-steps/package.json
+++ b/part9/first-steps/package.json
@@ -7,11 +7,15 @@
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
